--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,14 +14,14 @@ jobs:
         run: pod repo update
       - name: Build and Test CocoaPods
         run: pod lib lint --allow-warnings --fail-fast
-# Disabled for now. Next swift version should have Web Socket support
-#  linux:
-#    runs-on: ubuntu-latest
-#    container:
-#      image: swift:5.7.2
-#      options: --cap-add=SYS_PTRACE --security-opt seccomp=unconfined --security-opt apparmor=unconfined
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v3
-#      - name: Build and Test
-#        run: swift test
+ Disabled for now. Next swift version should have Web Socket support
+  linux:
+    runs-on: ubuntu-latest
+    container:
+      image: swift:5.7.3
+      options: --cap-add=SYS_PTRACE --security-opt seccomp=unconfined --security-opt apparmor=unconfined
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Build and Test
+        run: swift test
