--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
   linux:
     runs-on: ubuntu-latest
     container:
-      image: swift:5.8.1
+      image: swift:5.8.1-amazonlinux2
       options: --cap-add=SYS_PTRACE --security-opt seccomp=unconfined --security-opt apparmor=unconfined
     steps:
       - name: Checkout
