--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,9 +17,14 @@ jobs:
   linux:
     runs-on: ubuntu-latest
     container:
-      image: swift:5.8.1-amazonlinux2
+      image: swift:5.8.1-jammy
       options: --cap-add=SYS_PTRACE --security-opt seccomp=unconfined --security-opt apparmor=unconfined
     steps:
+      - name: Install latest curl
+        run: |
+          wget http://ftp.debian.org/debian/pool/main/c/curl/libcurl4_7.88.1-10_amd64.deb
+          sudo dpkg -i libcurl4_7.88.1-10_amd64.deb
+          rm libcurl4_7.88.1-10_amd64.deb
       - name: Checkout
         uses: actions/checkout@v3
       - name: Build and Test
