--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,9 @@ jobs:
     steps:
       - name: Install latest curl
         run: |
-          sudo apt update && sudo apt install wget
+          apt update && apt install wget
           wget -O curl.deb http://ftp.debian.org/debian/pool/main/c/curl/libcurl4_7.88.1-10_amd64.deb
-          sudo dpkg -i curl.deb
+          dpkg -i curl.deb
           rm curl.deb
       - name: Checkout
         uses: actions/checkout@v3
