--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,7 @@ jobs:
       options: --cap-add=SYS_PTRACE --security-opt seccomp=unconfined --security-opt apparmor=unconfined
     steps:
       - name: Install latest curl
-        run: |
-          apt update && apt install wget
-          wget -O curl.deb http://ftp.debian.org/debian/pool/main/c/curl/libcurl4_7.88.1-10_amd64.deb
-          dpkg -i curl.deb
-          rm curl.deb
+        run: bash .github/build_curl.sh
       - name: Checkout
         uses: actions/checkout@v3
       - name: Build and Test
