--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,9 @@ jobs:
       image: swift:5.8.1-jammy
       options: --cap-add=SYS_PTRACE --security-opt seccomp=unconfined --security-opt apparmor=unconfined
     steps:
-      - name: Install latest curl
-        run: ls -la && bash ./.github/build_curl.sh
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install latest curl
+        run: bash .github/build_curl.sh
       - name: Build and Test
         run: swift test
