--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,15 +14,13 @@ jobs:
         run: pod repo update
       - name: Build and Test CocoaPods
         run: pod lib lint --allow-warnings --fail-fast
-  # linux:
-  #   runs-on: ubuntu-latest
-  #   container:
-  #     image: swift:5.8.1-jammy
-  #     options: --cap-add=SYS_PTRACE --security-opt seccomp=unconfined --security-opt apparmor=unconfined
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #     - name: Install latest curl
-  #       run: bash .github/build_curl.sh
-  #     - name: Build and Test
-  #       run: swift test
+  linux:
+    runs-on: ubuntu-latest
+    container:
+      image: swift:5.8.1
+      options: --cap-add=SYS_PTRACE --security-opt seccomp=unconfined --security-opt apparmor=unconfined
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Build and Test
+        run: swift test
